# json_schema_generator

./: .gitignore  README.md  setup.cfg
.trunk/: trunk.yaml
json_schema_generator/: __init__.py  __main__.py  generate.py
sample_files/: sample.json  schema.json
tests/: test_generator.py
tests/fixtures/: invalid_json_syntax.json  not_json_array.json
