[metadata]
name = json_schema_generator
version = attr: json_schema_generator.__version__
description = Generate a JSON Schema from a List of JSON Objects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/onaio/json_schema_generator
author = Ona Systems Inc
author_email = support@ona.io

[options]
packages = find:
install_requires =
    genson

[options.entry_points]
console_scripts = json_schema_generator = json_schema_generator.__main__:main

[options.extras_require]
test =
    pytest
